--- a/splitpane-react/src/index.css
+++ b/splitpane-react/src/index.css
@@ -8,6 +8,7 @@ body {
   font-family: "Segoe UI", sans-serif;
   font-size: 1.2rem;
   text-align: center;
+  min-height: 40vh;
 }
 
 .split-pane-col {
