Finished project for submission

--- a/splitpane-react/src/App.css
+++ b/splitpane-react/src/App.css
@@ -44,3 +44,15 @@
     transform: rotate(360deg);
   }
 }
+
+.App-pitch {
+  background-color: #117863;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(5px + 1vmin);
+  color: white;
+
+}
